fix: cursor alignemet was off due to scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,10 @@ input{
     z-index:5;
 }
 
+.mirror{
+    pointer-events:none;  
+}
+
 .mirror_color{
     color : transparent;
     pointer-events:none;  
